--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="searchbar-container active">
                     <input type="search" name="user-input" id="input" placeholder="Enter a GitHub username..." required>
                     <div class="error">
-                        <p id="no-results">no search results</p>
+                        <p class="animation" id="no-results">no search results</p>
                     </div>
                     <button class="btn-search" id="submit">Search</button>
                 </div>
